# vesc_express

./: .gitignore  CMakeLists.txt  README.md  sdkconfig.defaults  sdkconfig.defaults.esp32c3  sdkconfig.defaults.esp32c6_fh4  sdkconfig.defaults.esp32c6_fh8  sdkconfig.defaults.esp32p4_nrw32n16  sdkconfig.defaults.esp32s3  sdkconfig.defaults.esp32s3_fh4  sdkconfig.defaults.esp32s3_fh4r2  sdkconfig.defaults.esp32s3_n16r8
bootloader_components/main/: CMakeLists.txt  bootloader_start.c
docker/: Dockerfile
lbm_examples/: gc9a01_cube.lisp  jd9165_gt911.lisp  sh8601_cst816s_cube_gyro.lisp
main/: CMakeLists.txt  adc.c  adc.h  comm_ble.c  comm_can.c  comm_wifi.c  commands.c  conf_general.h  idf_component.yml  lispif.c  lispif.h  lispif_c_lib.c  lispif_c_lib.h  lispif_vesc_extensions.c  log.c  main.c  terminal.c
main/ble/: custom_ble.c
main/c_libs/: README.md  vesc_c_if.h
main/config/: conf_default.h  confparser.h  confxml.c  confxml.h  settings.xml
main/display/: disp_axs15231.c  disp_jd9165.c  disp_jd9165.h  disp_ssd1306.c  lispif_disp_extensions.c
main/drivers/: hwspi.c
main/drivers/bme280/: bme280_if.c  bme280_if.h
main/drivers/imu/: bmi160_wrapper.c  bmi160_wrapper.h  imu.c  imu.h  mpu9x50_wrapper.c  mpu9x50_wrapper.h  qmi8658.c  qmi8658.h
main/hwconf/: hw.h  hw_ecubox.c  hw_ecubox.h  hw_glogx.c  hw_glogx.h
main/hwconf/trampa/: hw_disp_v1.c
main/lispBM/src/: eval_cps.c
main/rgbled/: lispif_rgbled_extensions.c
main/touch/: lispif_touch_extensions.c  touch_cst836u.c  touch_cst836u.h
main/wifi/: lispif_wifi_extensions.c
(+12 files in other folders)
